--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -35,6 +35,14 @@
                                 </ul>
                             </li>
                             <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="fas fa-ad"></i> <span> Email Templates </span> <span class="menu-arrow"></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/email-templates">Email  Templates</a></li>
+                                    <li><a href="/admin/email-template/add">Add New Template</a></li>
+                                    <li><a href="/admin/email-template/identities">Identities</a></li>
+                                </ul>
+                            </li>
+                            <li class="has_sub">
                                 <a href="javascript:void(0);" class="waves-effect"><i class="ti-files"></i> <span> Pages </span> <span class="menu-arrow"></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="/admin/pages">Pages</a></li>
