--- a/views/admin/settings.hbs
+++ b/views/admin/settings.hbs
@@ -14,32 +14,69 @@
                             </div>
                         </div>
                         {{#if flash.error}}
-                            <div class="row"></div>
+                            <div class="row">
                                 <div class="alert alert-danger">
                                 {{{flash.error}}}
                                 </div>
                             </div>
                         {{/if}}
-
-
+                        {{#if flash.success}}
+                        <div class="alert alert-success" role="alert">
+								{{{flash.success}}}
+						</div>
+                        {{/if}}
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="card-box">
-                                    <h4 class="text-dark header-title m-t-0">Settings</h4>
-                                   
-                                </div>
-                                <!-- /Portlet -->
-
-                            </div>
-
-                        </div>
+                                <div class="card-box ">
+                                    <h4 class="text-dark header-title m-t-0">SES Settings</h4>
+                                   <form class="row" action="" method="POST">
+                                    <div class="form-group col-lg-6">
+                                        <label for="accessKeyId">Access Key Id</label>
+                                        <input type="text" class="form-control" id="accessKeyId" name="accessKeyId" placeholder="Access Key Id" value="">
+                                    </div>
+                                    <div class="form-group col-lg-6">
+                                        <label for="secretAccessKey">Secret Access Key</label>
+                                        <input type="text" name="secretAccessKey" class="form-control" id="secretAccessKey" placeholder="Secret Access Key" value="">
+                                    </div>
+                                    <div class="form-group col-lg-6">
+                                        <label for="region">Region</label>
+                                        <select class="form-control" name="region" id="region">
+                                            <option value="ap-south-1">Asia Pacific (Mumbai)</option>
+                                            <option value="us-east-1">US East (N. Virginia)</option>
+                                            <option value="us-east-2">US East (Ohio)</option>
+                                            <option value="us-west-1">US West (N. California)</option>
+                                            <option value="us-west-2">US West (Oregon)</option>
+                                            <option value="ap-northeast-3">Asia Pacific (Osaka)</option>
+                                            <option value="ap-northeast-2">Asia Pacific (Seoul)</option>
+                                            <option value="ap-southeast-1">Asia Pacific (Singapore)</option>
+                                            <option value="ap-southeast-2">Asia Pacific (Sydney)</option>
+                                            <option value="ap-northeast-1">Asia Pacific (Tokyo)</option>
+                                            <option value="ca-central-1">Canada (Central)</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-lg-6">
+                                        <label for="configurationSetName">Configuration Set Name</label>
+                                        <input type="text" class="form-control" id="ConfigurationSetName" placeholder="Configuration Set Name" value="" name="configurationSetName">
+                                    </div>
+                                    <div class="form-group col-lg-6">
+                                        <label>Unsubscribe Url</label>
+                                        <span class="form-control"> URL</span>
+                                    </div>
+					<!--<div class="form-check">
+					  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+					  <label class="form-check-label" for="exampleCheck1">Check me for activeted profile</label>
+					</div>-->
+					
+				  </form>
+                  <button type="submit" class="btn btn-primary">Save Details</button>
+				    <small class="form-text">We'll never share your SES details with anyone else.</small>
+                </div>
+                <!-- /Portlet -->
+            </div>
+        </div>
                         <!-- end row -->
-
-
-                        
-                    </div> <!-- container -->
-
-                </div> <!-- content -->
+    </div> <!-- container -->
+</div> <!-- content -->
 
                
 
