--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -8,9 +8,11 @@
   <link href="/admin/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="/admin/css/icons.css" rel="stylesheet" type="text/css" />
   <link href="/admin/css/style.css" rel="stylesheet" type="text/css" />
+  <link href="/admin/css/custom.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="/admin/css/switchery.min.css">
 <link rel="stylesheet" type="text/css" href="/admin/css/ladda.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
+
   <script src="/admin/js/modernizr.min.js"></script>
   {{!-- <script src="/admin/js/jquery.min.js"></script> --}}
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
