--- a/views/admin/emailtemplate/add_template.hbs
+++ b/views/admin/emailtemplate/add_template.hbs
@@ -63,6 +63,9 @@
                         </div>
                     </div>
                     <div class="mb-3">
+                        <code>{{synt}}</code>
+                    </div>
+                    <div class="mb-3">
                         <hr style="border: 1px dashed #5a5858;" class="mt-0 mb-1">
                     </div>
                     <div class="mb-3">
