--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -35,13 +35,21 @@
                                 </ul>
                             </li>
                             <li class="has_sub">
-                                <a href="javascript:void(0);" class="waves-effect"><i class="fas fa-ad"></i> <span> Email Templates </span> <span class="menu-arrow"></span></a>
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-email"></i> <span> Email Templates </span> <span class="menu-arrow"></span></a>
                                 <ul class="list-unstyled">
                                     <li><a href="/admin/email-templates">Email  Templates</a></li>
                                     <li><a href="/admin/email-template/add">Add New Template</a></li>
-                                    <li><a href="/admin/email-template/identities">Identities</a></li>
+                                    <li><a href="/admin/email-template/identities">Senders</a></li>
+                                    <li><a href="/admin/contacts/list">Contacts List</a></li>
                                 </ul>
                             </li>
+                            <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-crown"></i> <span> Campaign </span> <span class="menu-arrow"></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/campaign">Campaigns List</a></li>
+                                </ul>
+                            </li>
+                            
                             <li class="has_sub">
                                 <a href="javascript:void(0);" class="waves-effect"><i class="ti-files"></i> <span> Pages </span> <span class="menu-arrow"></span></a>
                                 <ul class="list-unstyled">
