--- a/views/admin/campaign/list.hbs
+++ b/views/admin/campaign/list.hbs
@@ -7,31 +7,25 @@
                         <!-- Page-Title -->
                         <div class="row">
                             <div class="col-sm-12">
-                                <h4 class="page-title">Senders List</h4>
+                                <h4 class="page-title">Campaign List</h4>
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="#">Form</a></li>
-                                    <li class="breadcrumb-item active">Senders</li>
+                                    <li class="breadcrumb-item active">Campaign</li>
                                 </ol>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                               
-
-                                 <button id="sync" class="btn btn-default btn-md waves-effect waves-light m-b-30" onclick="sync();">
-                                    <i class="md md-sync"></i>
-                                    Sync Identities
-                                 </button>
                                    <button class="btn btn-default btn-md waves-effect waves-light m-b-30" onclick="showForm();">
                                     <i class="md md-add"></i>
-                                    Add Identities
+                                    Add Campaign
                                  </button>
 
                             </div>
                         </div>
 
                          <div class="row justify-content-md-center">
-                            <div class="col-sm-12 col-md-8 col-lg-8">
+                            <div class="col-sm-12 col-md-12 col-lg-12">
                                 <div class="card-box">
                                     {{#if flash.error}}
                                         <div class="alert alert-danger">
@@ -43,27 +37,29 @@
                                         {{{flash.success}}}
                                         </div>
                                     {{/if}}
-                                        <h4 class="text-dark header-title m-t-0">Senders List</h4>
+                                        <h4 class="text-dark header-title m-t-0">Campaign List</h4>
                                         <div class="table-responsive">
                                                 <table class="table table-actions-bar">
                                                     <thead>
                                                     <tr>
                                                         <th>Sr. No.</th>
-                                                        <th>Sender Name</th>
-                                                        <th>verification Status</th>
+                                                        <th>Name</th>
+                                                        <th>Template</th>
+                                                        <th>Sender</th>
                                                         <th>Status</th>
                                                         <th>Created</th>
-                                                        
+                                                        <th>Action</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
-                                                    {{#if datas.length }}
-                                                    {{#each datas }}
-                                                     
+                                                    {{#if campaigns.length }}
+                                                    {{#each campaigns }}
+
                                                    <tr>
                                                         <td>{{incrementedIndex @index}}</td>
-                                                        <td>{{{this.identityName}}}</td>
-                                                        <td>{{this.verificationStatus}}</td>
+                                                        <td>{{{this.name}}}</td>
+                                                        <td>{{{this.template}}}</td>
+                                                        <td>{{this.sender}}</td>
                                                         <td>
                                                             {{#if this.status }}
                                                                  <input id="{{this._id}}" class="switch" type="checkbox" checked=""  name="status" data-id="{{this._id}}">
@@ -72,6 +68,11 @@
                                                             {{/if}}
                                                         </td>
                                                         <td>{{formatDate this.createdAt}}</td>
+                                                        <td>
+                                                             <a href="/admin/campaign/view/{{this._id}}" class="btn btn-success waves-effect waves-light"><i class="md md-visibility"></i></a>
+
+                                                             <a href="/admin/campaign/analytics/{{this._id}}" class="btn btn-success waves-effect waves-light"><i class="ti-bar-chart"></i></a>
+                                                        </td>
                                                     </tr>
                                                    {{/each}}
                                                    {{else}}
@@ -87,22 +88,50 @@
                     </div> <!-- container -->
                 </div> <!-- content -->
 
-    <div class="right-card">
+    <div class="right-card" style="top:70px">
 		<div class="card-body">
-		<h4 class="text-white header-title m-t-0 m-b-20">Send verify email</h4>
-		<form id="form_data" method="POST" action="" onsubmit="return send();" >	
+		<h4 class="text-white header-title m-t-0 m-b-20">Add New Campaign</h4>
+		<form id="form_data" method="POST" action="" onsubmit="return saveCampaign();"  >	
 			<div class="mb-3">
-                <label class="form-label text-white" for="email">Email</label>
-                <input id="email" type="email" class="form-control" name="email" value="" required="" />
+                <label class="form-label text-white" for="email">Campaign Name *</label>
+                <input id="name" type="text" class="form-control" name="name" value="" required="" />
 		    </div>
-		<div class="mb-3 m-t-40">
-			<button id="save"  type="submit" class="btn btn-purple btn-md w-md waves-effect waves-light" >
-				Send
-			</button>
-			<button  type="button" class="btn btn-purple btn-md w-md pull-right" onclick="showForm()">
-				Cancel
-			</button>
-		</div>
+            <div class="mb-3">
+                <label class="form-label text-white" for="email">Template Name *</label>
+                <select id="template" class="text-white form-control" name="template" required>
+					<option value="">Select Template Name</option>
+					{{#each templates }}
+					    <option value="{{this.templateSlug}}">{{{this.templateName}}}</option>
+					{{/each}}
+				</select>
+		    </div>
+            <div class="mb-3">
+                <label class="form-label text-white" for="email">Sender *</label>
+                <select id="sender" class="text-white form-control" name="sender" required>
+					<option value="">Select Sender</option>
+					{{#each senders }}
+					    <option value="{{this.identityName}}">{{{this.identityName}}}</option>
+					{{/each}}
+				</select>
+		    </div>
+            <div class="mb-3">
+                <label class="form-label text-white" for="email">Contacts List *</label>
+                <select id="contact" class="text-white form-control" name="contact" required>
+					<option value="">Select Contacts List</option>
+					{{#each contacts }}
+					    <option value="{{this._id}}">{{{this.name}}}</option>
+					{{/each}}
+				</select>
+		    </div>
+            
+            <div class="mb-3 m-t-40">
+                <button id="save"  type="submit" class="btn btn-purple btn-md w-md waves-effect waves-light" >
+                    Save
+                </button>
+                <button  type="button" class="btn btn-purple btn-md w-md pull-right" onclick="showForm()">
+                    Cancel
+                </button>
+            </div>
          <div id="outMsg" class="mb-3"></div>
 		</form>
 		</div>
@@ -133,55 +162,42 @@ function showForm(){
 	$('.right-card').toggleClass('active');
 }
 
-function sync(){
-    var l = Ladda.create(document.querySelector('#sync'));
-    l.start();
-    fetch('/admin/template/sync-identities', {
-            method: 'POST'
-        })
-        .then(response => response.text())
-        .then(result => {
-            var r = JSON.parse(result);
-            console.log(r);
-            l.stop();
-            if(result.status=='success'){
-            }
-            window.location.reload(true);
-        }).catch(error => {
-            console.error('Error:', error);
-            l.stop();
-        });
-}
-
-function send(){
+function saveCampaign(){
     var l = Ladda.create(document.querySelector('#save'));
     l.start();
-    const email = document.getElementById('email').value;
-    fetch('/admin/template/add-identity', {
-            method: 'POST',
-            body: JSON.stringify({
-                identityName:email
-            }),
-            headers: {
-                'Content-Type': 'application/json',
-            },
-        })
-        .then(response => response.text())
-        .then(result => {
-            var r = JSON.parse(result);
-            l.stop();
-            if(r.status=='success'){
-                $('#outMsg').html('<div class="alert alert-success">'+r?.message+'</div>');
-                document.getElementById('email').value='';
-            }
-            if(r.status=='error'){
-                $('#outMsg').html('<div class="alert alert-danger">'+r?.message+'</div>');
-            }
-        }).catch(error => {
-            console.error('Error:', error);
-            l.stop();
-             $('#outMsg').html('<div class="alert alert-danger">'+error?.message+'</div>');
-        });
+    const name = document.getElementById('name').value;
+    const template = document.getElementById('template').value;
+    const sender = document.getElementById('sender').value;
+    const contact =document.getElementById('contact').value;
+    fetch('/admin/campaign/create', {
+        method: 'POST',
+        body:JSON.stringify({
+            name,
+            template,
+            sender,
+            contact
+        }),
+        headers: {
+        'Content-Type': 'application/json',
+        }
+    })
+    .then(response => response.text())
+    .then(result => {
+        var r = JSON.parse(result);
+        l.stop();
+        if(r.status=='success'){
+            $('#outMsg').html('<div class="alert alert-success">'+r?.message+'</div>');
+            $('.right-card').toggleClass('active');
+            window.location.reload(true);
+        }
+        if(r.status=='error'){
+            $('#outMsg').html('<div class="alert alert-danger">'+r?.message+'</div>');
+        }
+    }).catch(error => {
+        console.error('Error:', error);
+        l.stop();
+            $('#outMsg').html('<div class="alert alert-danger">'+error?.message+'</div>');
+    });
     return false;
 }
 </script>
