--- a/views/admin/campaign/view.hbs
+++ b/views/admin/campaign/view.hbs
@@ -10,7 +10,7 @@
                                 <h4 class="page-title">Campaign </h4>
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="#">Form</a></li>
-                                    <li class="breadcrumb-item active">Campaign</li>
+                                    <li class="breadcrumb-item active"> <a href="/admin/campaign">Campaign</a></li>
                                 </ol>
                             </div>
                         </div>
@@ -42,18 +42,26 @@
                                             <tr><td>Contact Group</td><td>{{campaign.contacts.name}}</td></tr>
                                             <tr><td>Total No of Contacts</td><td>{{campaign.contacts.contacts}}</td></tr>
                                             <tr><td>From Email</td><td>{{campaign.sender}}</td></tr>
-                                            <tr><td>Status</td><td>{{campaign.status}}</td></tr>
+                                            <tr><td>Status</td><td>{{status campaign.status}}</td></tr>
                                             <tr><td>Created Date</td><td>{{formatDate campaign.created_at}}</td></tr>
+                                            <tr><td>Campaign Status</td><td>{{campaign.campaignStatus}}</td></tr>
                                         </table>
                                     </div>
                                     </div>
                                 </div>
+                            
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                  <div class="card-box bg-1">
+                                    {{#if (eq campaign.campaignStatus 'created')}}
                                     <button id="sent" onclick="sentCampaign()"  type="submit" class="btn btn-purple btn-md w-md waves-effect waves-light" ><i class="md md-send"></i> Send Campaign</button>
+                                    {{/if}}
+                                    {{#if (eq campaign.campaignStatus 'done')}}
+                                     <a href="/admin/campaign/analytics/{{this._id}}" class="btn btn-success waves-effect waves-light"><i class="ti-bar-chart"></i> View Campaign Analytics</a>
+                                      {{/if}}
                                  </div>
                                 
                             </div>
+
                         </div>
                         <!-- end row -->
                     </div> <!-- container -->
