--- a/views/admin/template/edit_template.hbs
+++ b/views/admin/template/edit_template.hbs
@@ -5,23 +5,24 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
-            <h4 class="page-title">Add Email Template</h4>
+            <h4 class="page-title">Edit email template</h4>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/admin/dashboard">Adolaa</a></li>
-                <li class="breadcrumb-item"><a href="/admin/email-templates">Email Template</a></li>
-                <li class="breadcrumb-item active">Add Email Template</li>
+                <li class="breadcrumb-item"><a href="/admin/dashboard">CRM</a></li>
+                <li class="breadcrumb-item"><a href="/admin/templates">Email template</a></li>
+                <li class="breadcrumb-item active">Edit email template</li>
             </ol>
         </div>
     </div>
 <div class="row">
     <div class="col-md-6">
-        <a href="/admin/email-templates" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right"><i class="md md-list"></i> All Email Template</a>
+        <a href="/admin/templates" class="btn btn-default btn-md waves-effect waves-light m-b-30"><i class="md md-list"></i> All Templates</a>
+        <a href="/admin/template/add" class="btn btn-default btn-md waves-effect waves-light m-b-30"><i class="md md-add"></i> Add New</a>
     </div>
 </div>
         <div class="row justify-content-md-center">
         <div class="col-sm-12 col-md-9">
             <div class="card-box">
-                <h4 class="text-dark header-title m-t-0">Add Email Template</h4>
+                <h4 class="text-dark header-title m-t-0">Edit email template</h4>
                 {{#if flash.error}}
                     <div class="alert alert-danger">
                     {{{flash.error}}}
@@ -32,8 +33,7 @@
                     {{{flash.success}}}
                     </div>
                 {{/if}}
-                <form id="pageForm" action="/admin/email-template/create" method="post" onsubmit="return saveData();">
-
+                <form id="pageForm" action="/admin/template/update/{{id}}" method="post" onsubmit="return updateData()">
                     <div class="mb-3">
                         <label class="form-label">Template Type</label>
                         <select class="form-control" name="type" id="type">
@@ -42,31 +42,30 @@
                             <Option value="whatsapp-template">WhatsApp Template</Option>
                         </select>
                     </div>
-
+                   
                     <div class="mb-3">
                         <label class="form-label">Template Name</label>
-                        <input id="name" name="name" autocomplete="name" type="text" class="form-control" required="" >
+                        <input id="name" name="name" autocomplete="name" type="text" class="form-control" required="" value="{{data.templateName}}" readonly>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Template Subject</label>
-                        <input id="subject" name="subject" autocomplete="subject" type="text" class="form-control" required="" >
+                        <input id="subject" name="subject" autocomplete="subject" type="text" class="form-control" required="" value="{{data.templateSubject}}">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="">Template Content</label>
-                        <textarea id="content"  name="content" rows="5" class="form-control tinymce" aria-hidden="true"></textarea>
+                        <textarea id="content"  name="content" rows="5" class="form-control tinymce" aria-hidden="true">{{data.templateContent}}</textarea>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label" for="">Status</label>
                         <div>
+                            {{#if data.status}}
                             <input id="status" type="checkbox" checked="" data-plugin="switchery" data-color="#1bb99a" data-switchery="true" name="status">
+                            {{else}}
+                            <input id="status" type="checkbox" data-plugin="switchery" data-color="#1bb99a" data-switchery="true" name="status">
+                            {{/if}}
+
                         </div>
-                    </div>
-                    <div class="mb-3">
-                        <code>{{synt}}</code>
-                    </div>
-                    <div class="mb-3">
-                        <hr style="border: 1px dashed #5a5858;" class="mt-0 mb-1">
                     </div>
                     <div class="mb-3">
                         <button id="saveBtn" type="submit" class=" waves-light btn btn-success btn-md waves-effect"><i class="md md-add"></i>Save</button>
@@ -81,6 +80,7 @@
 </div> <!-- container -->
 </div> <!-- content -->
 <script src="https://cdn.tiny.cloud/1/xe0yrjzxxk4vt0m1103e4dazp7y4qisilkaiji7iozziavt1/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+
 <script type="text/javascript">
     tinymce.init({
         selector: "textarea.tinymce",
@@ -92,19 +92,21 @@
         plugins: 'lists link table code',
         toolbar: 'undo redo | bold italic underline | forecolor backcolor | bullist numlist blockquote table | link unlink | alignleft aligncenter alignright | outdent indent | fontsizeselect | code',
      });
-
-function saveData(){
+function updateData(){
     const form = document.getElementById('pageForm');
-    var pageForm = new FormData(form);
+   var pageForm = $('#pageForm').serializeArray();
+    //var pageForm = new FormData(form);
     var l = Ladda.create(document.querySelector('#saveBtn'));
+    l.start();
+   
     const templateName = document.getElementById('name').value;
     const templateContent = document.getElementById('content').value;
     const templateSubject = document.getElementById('subject').value;
      const type = document.getElementById('type').value;
     const status = document.getElementById('status').value;
     const data = { templateName, templateSubject,status,type,templateContent };
-    l.start();
-    fetch('/admin/email-template/create', {
+
+     fetch('/admin/template/update/{{id}}', {
         method: 'POST',
         body: JSON.stringify(data),
         headers: {
@@ -117,7 +119,6 @@ function saveData(){
         result = JSON.parse(result);
         if(result.status=='success'){
             $('#outMsg').html('<div class="alert alert-success">'+result?.message+'</div>');
-            form.reset();
         }
         if(result.status=='error'){
             $('#outMsg').html('<div class="alert alert-danger">'+result?.message+'</div>');
@@ -126,6 +127,7 @@ function saveData(){
       .catch(error => {
         l.stop();
         $('#outMsg').html('<div class="alert alert-danger">'+error?.message+'</div>');
+
       });
 
     return false;
