--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -35,11 +35,11 @@
                                 </ul>
                             </li>
                             <li class="has_sub">
-                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-email"></i> <span> Email Templates </span> <span class="menu-arrow"></span></a>
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-email"></i> <span>Templates </span> <span class="menu-arrow"></span></a>
                                 <ul class="list-unstyled">
-                                    <li><a href="/admin/email-templates">Email  Templates</a></li>
-                                    <li><a href="/admin/email-template/add">Add New Template</a></li>
-                                    <li><a href="/admin/email-template/identities">Senders</a></li>
+                                    <li><a href="/admin/templates">Templates</a></li>
+                                    <li><a href="/admin/template/add">Add New Template</a></li>
+                                    <li><a href="/admin/email-template/identities">Email Senders</a></li>
                                     <li><a href="/admin/contacts/list">Contacts List</a></li>
                                 </ul>
                             </li>
