--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -80,6 +80,10 @@
                                 </ul>
                             </li>
                             <li class="has_sub">
+                                <a href="/admin/settings/subscribers" class="waves-effect"><i class="ti-email"></i> <span> Subscribers </span></a>
+                                
+                            </li>
+                            <li class="has_sub">
                                 <a href="/admin/settings" class="waves-effect"><i class="ti-settings"></i> <span> Seetings </span></a>
                             </li>
                         </ul>
