--- a/views/admin/template/add_template.hbs
+++ b/views/admin/template/add_template.hbs
@@ -83,7 +83,7 @@
 <script src="https://cdn.tiny.cloud/1/xe0yrjzxxk4vt0m1103e4dazp7y4qisilkaiji7iozziavt1/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
 <script type="text/javascript">
     tinymce.init({
-        selector: "textarea.tinymce",
+        selector: "#content",
         language: 'en',
         directionality: 'ltr',
         height: 400,
@@ -98,7 +98,7 @@ function saveData(){
     var pageForm = new FormData(form);
     var l = Ladda.create(document.querySelector('#saveBtn'));
     const templateName = document.getElementById('name').value;
-    const templateContent = document.getElementById('content').value;
+    const templateContent = tinymce.get('content').getContent()||document.getElementById('content').value;
     const templateSubject = document.getElementById('subject').value;
      const type = document.getElementById('type').value;
     const status = document.getElementById('status').value;
