--- a/views/admin/template/edit_template.hbs
+++ b/views/admin/template/edit_template.hbs
@@ -83,7 +83,7 @@
 
 <script type="text/javascript">
     tinymce.init({
-        selector: "textarea.tinymce",
+        selector: "#content",
         language: 'en',
         directionality: 'ltr',
         height: 400,
@@ -91,6 +91,12 @@
         statusbar: false,
         plugins: 'lists link table code',
         toolbar: 'undo redo | bold italic underline | forecolor backcolor | bullist numlist blockquote table | link unlink | alignleft aligncenter alignright | outdent indent | fontsizeselect | code',
+        setup: function (editor) {
+            // You can use this callback to ensure TinyMCE is fully initialized
+            editor.on('init', function () {
+                console.log("TinyMCE is initialized");
+            });
+        }
      });
 function updateData(){
     const form = document.getElementById('pageForm');
@@ -100,7 +106,7 @@ function updateData(){
     l.start();
    
     const templateName = document.getElementById('name').value;
-    const templateContent = document.getElementById('content').value;
+    const templateContent = tinymce.get('content').getContent()||document.getElementById('content').value;
     const templateSubject = document.getElementById('subject').value;
      const type = document.getElementById('type').value;
     const status = document.getElementById('status').value;
